feat(); first solid impl

--- a/www/index.html
+++ b/www/index.html
@@ -2,10 +2,16 @@
 
 <head>
   <script type="module" src="../build/web-canvas.js"></script>
+
+  <style>
+    
+  </style>
 </head>
 
 <body>
-  <web-canvas></web-canvas>
+
+  <web-canvas height="400" width="400"></web-canvas>
+  <web-canvas height="400" width="400" showcontrols></web-canvas>
 </body>
 
 </html>
